[package]
name = "networked-led-toggle"
version = "0.1.0"
edition = "2024"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "tcp",
  "time",
  "external-interrupts",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
embedded-io-async = "0.6.1"
heapless = "0.8.0"
